Bug 1704255 - Include STIXGeneral ahead of Apple Symbols in common fallbacks for symbol characters on macOS. r=m_kato

The glyphs in Apple Symbols tend to be visually quite small relative to common text fonts,
so preferring STIXGeneral will give a less jarring appearance in some cases.

Differential Revision: https://phabricator.services.mozilla.com/D111534